--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,19 @@ body,
 :root {
   height: 100%;
 }
+
+.leaflet-buttom,
+.leaflet-control,
+.leaflet-pane,
+.leaflet-top {
+  z-index: 0 !important;
+}
+
+.rdrMonth {
+  width: 100% !important;
+}
+
+.rdrCalenderWrapper {
+  font-size: 16px !important;
+  width: 100% !important;
+}
